--- a/src/app/blocks/popups/add-employee/add-employee.component.html
+++ b/src/app/blocks/popups/add-employee/add-employee.component.html
@@ -217,7 +217,7 @@
       </div>
     </div>
     <div formArrayName="cathedras">
-      <div *ngFor="let pos of addForm.get('cathedras').value.controls; let i=index" [formGroupName]="i">
+      <div *ngFor="let pos of addForm.get('cathedras')['controls']; let i=index" [formGroupName]="i">
         <div class="row">
           <div class="col-lg-4">
             <label *ngIf="i === 0">Кафедра</label>
