--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -22,15 +22,15 @@
                 <h5 class="grid-h">Ім'я</h5>
                 <div class="form-group">
                   <input type="text" placeholder="Ім'я українською" class="form-control" disabled
-                         value="{{user.firstNameUa}} {{user.middleNameUa}} {{user.lastNameUa}}"/>
+                         value="{{user.lastNameUa}} {{user.firstNameUa}} {{user.middleNameUa}}"/>
                 </div>
                 <div class="form-group">
                   <input type="text" placeholder="Ім'я англійською" class="form-control" disabled
-                         value="{{user.firstName}} {{user.middleName}} {{user.lastName}}"/>
+                         value="{{user.lastName}} {{user.firstName}} {{user.middleName}}"/>
                 </div>
                 <div class="form-group">
                   <input type="text" placeholder="Ім'я російською" class="form-control" disabled
-                         value="{{user.firstNameRu}} {{user.middleNameRu}} {{user.lastNameRu}}"/>
+                         value="{{user.lastNameRu}} {{user.firstNameRu}} {{user.middleNameRu}}"/>
                 </div>
               </div>
 
