Profile for edit mode preparation

--- a/src/app/pages/employees/employees.component.html
+++ b/src/app/pages/employees/employees.component.html
@@ -23,7 +23,8 @@
         <ng2-smart-table [settings]="settings"
                          [source]="source"
                          (create)="onAddConfirm($event)"
-                         (delete)="onDeleteConfirm($event)">
+                         (delete)="onDeleteConfirm($event)"
+                         (userRowSelect)="goToProfile($event)">
         </ng2-smart-table>
       </div>
     </div>
