--- a/src/app/pages/employees/employees.component.html
+++ b/src/app/pages/employees/employees.component.html
@@ -23,6 +23,7 @@
         <ng2-smart-table [settings]="settings"
                          [source]="source"
                          (create)="onAddConfirm($event)"
+                         (edit)="onEditConfirm($event)"
                          (delete)="onDeleteConfirm($event)"
                          (userRowSelect)="goToProfile($event)">
         </ng2-smart-table>
